fix: 21406 zero address check for contract call (#21438)
Signed-off-by: Glib Kozyryatskyy <glib.k@swirldslabs.com>